[-] Bug fixed.
[+] Feature added.
[*] Change.

2007-??-?? v0.95
================
- fixed a StackOverflowError that occured during invariant checking for 
  guarded classes that override the hashCode() method (thanks to io_exception)
- fixed some issues with the XML configuration DTD

2007-03-18 v0.9
===============
Built-in constraints:
  * renamed package net.sf.oval.constraints to net.sf.oval.constraint
  * net.sf.oval.constraint.NoSelfReference: renamed @NotSelfRef to @NoSelfReference
  * net.sf.oval.constraint.MatchPattern: renamed @RegEx to @MatchPattern
  + added @net.sf.oval.constraint.Assert for use with expression languages
  + added @net.sf.oval.constraint.CheckWith (as an alternative to @ValidateWithMethod)
  + added @net.sf.oval.constraint.Future
  + added @net.sf.oval.constraint.HasSubstring
  + added @net.sf.oval.constraint.Max
  + added @net.sf.oval.constraint.MaxLength
  + added @net.sf.oval.constraint.MaxSize
  + added @net.sf.oval.constraint.Min
  + added @net.sf.oval.constraint.MinLength
  + added @net.sf.oval.constraint.MinSize
  + added @net.sf.oval.constraint.Past
  * when @AssertValid is used on a map the map's keys and values are now validated too by default (thanks to tahura)  

Annotation configuration:
  * dropped @net.sf.oval.annotations.DefineConstraintSet
  * net.sf.oval.Constraint: moved from package net.sf.oval.annotations
  * added @net.sf.oval.configuration.annotation.IsInvariant

XML configuration:
  - XML configuration now also works for JREs not having the StAX API present
  * simplified the OVal XML configuration DTD

Expression languages:
  + added plugable support for expression languages
  + added support for JavaScript as expression language (via Mozilla Rhino)
  + added support for Groovy as expression language
  + added support for BeanShell as expression language

Validator:
  + validation of static fields and static method return values is now supported

Guard (programming by contract):